declarator/test/snippets/fail/headers/overloaded_function.h
#pragma once

#include "TS.h"

TS_EXPORT double getNumber();

TS_EXPORT double capacity();
TS_EXPORT void capacity(double d);



